--- a/config/default.conf
+++ b/config/default.conf
@@ -1,12 +1,12 @@
 [wechat]
 
-# ÒÔÏÂËùÒÔÈºÃû¶¼Òª±£Ö¤ÊÇËÑË÷µÄÎ¨Ò»½á¹û£¬·ñÔò±¨´í£¬·ÀÖ¹ÒâÍâ¼ÓÈëÆäËüÈº
+# ä»¥ä¸‹æ‰€ä»¥ç¾¤åéƒ½è¦ä¿è¯æ˜¯æœç´¢çš„å”¯ä¸€ç»“æžœï¼Œå¦åˆ™æŠ¥é”™ï¼Œé˜²æ­¢æ„å¤–åŠ å…¥å…¶å®ƒç¾¤
 
-#ÒªÍ¬²½µÄÈº£¬ÐèÒª»úÆ÷ÈË¶¼ÔÚÈºÀï
+#è¦åŒæ­¥çš„ç¾¤ï¼Œéœ€è¦æœºå™¨äººéƒ½åœ¨ç¾¤é‡Œ
 
-group_names=²âÊÔ2,²âÊÔ»úÆ÷ÈË
+group_names=æµ‹è¯•2,æµ‹è¯•æœºå™¨äºº
 
-# ²»Í¬²½ÏûÏ¢£¬Ö»¿ª·ÅÈº²éÑ¯µÄÈº
-group_names_atOnly=¹ÜÀíÔ±
+# ä¸åŒæ­¥æ¶ˆæ¯ï¼Œåªå¼€æ”¾ç¾¤æŸ¥è¯¢çš„ç¾¤
+group_names_atOnly=ç®¡ç†å‘˜
 
-prefixText =(¸ô±Ú)
+prefixText =(éš”å£)
